<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="ExtraText">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_set_name"
            android:text="@string/nama_legenda"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="Judul Headline" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:lineSpacingMultiplier="1"
            tools:text = "test aja"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/prestasinya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="@string/prestasi" />
        <TextView
            android:id="@+id/prestasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/black"
            tools:text="deretan prestasi" />

        <Button
            android:id="@+id/btn_share"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="clip_horizontal|center|clip_vertical"
            android:backgroundTint="@color/design_default_color_error"
            android:gravity="center"
            android:text="@string/share"
            android:textColor="@color/white" />


    </LinearLayout>
</ScrollView>
